working linebreaks in both directions on copy and prevented on tout

--- a/src/styl/annotations.styl
+++ b/src/styl/annotations.styl
@@ -64,7 +64,9 @@ anchor-placement()
 			font-family $font-sans
 			
 		p > span:first-child
-			font-family $font-sans-bold			
+			font-family $font-sans-bold
+			br
+				display none	
 			
 		.end-mark
 			width 1px
